--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="lib/d3v5.min.js"></script>
         <script src="lib/crossfilter.min.js"></script>
 
-        <script src="https://unpkg.com/topojson-client@3"></script>
+        <script src="lib/topojson.js"></script>
         <script src="helper/code.js"></script>
         <script src="countriespoints.js"></script>
         <script src="data/maindata.js"></script>
