--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="#showPoints2" class="navigation-item counter">showPoints2</a>
         <a href="#Connection" class="navigation-item counter">Connection</a>
         <a href="#TopTerriost" class="navigation-item counter">TopTerriost</a>
-        <a href="#Summary" class="navigation-item counter">Summary</a>
+        <a href="#showArea" class="navigation-item counter">showArea</a>
         <a href="#Details" class="navigation-item counter">Details</a>
         <a href="#Final" class="navigation-item counter">End</a>
     </nav>
@@ -69,9 +69,9 @@
                         <div class="section-title counter">Top Terriost</div>
                         Top Terriost
                     </section>
-                    <section class="step summary" id="Summay">
-                        <div class="section-title counter">Summay</div>
-                        Summary Maps
+                    <section class="step showArea" id="showArea">
+                        <div class="section-title counter">showArea</div>
+                        showArea Maps
                     </section>
                     <section class="step details" id="Details">
                         <div class="section-title counter">Details</div>
