--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <section-title>Main</section-title>
-       
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <script src="lib/d3v5.min.js"></script>
         <script src="lib/crossfilter.min.js"></script>
