--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </svg>
 
         <nav class="navigation">
+            <a href="#Intro" class="navigation-item counter">Introduction</a>
             <a href="#EnterMap" class="navigation-item counter">Worldwide Terrorism</a>
             <a href="#showPoints" class="navigation-item counter ">Top Countries</a>
             <a href="#Connection" class="navigation-item counter">Connection of attacks</a>
@@ -42,32 +43,26 @@
         <div class="container">
 
             <div id='graphic'>
-                <p class="introduction" style="margin-top: 400px;">
-                    <div>Terriost Acctack</div>
-                    Worldwide terrism
-
-                    <p class="welcome" id="wel"> Welcome to our website </p>
-                    <p class="welpage" id="wel2">
-                        Our website is focusing on the terrorist that happened around the world from <b>1970 -
-                            2017
-                            We will introduce the worldwide terrorist that happened during this period in various
-                            graph.
-                            <br />
-                            The definition given by the researchers of terrorism is:
-                            "The threatened or actual use of illegal force and violence by a non-state actor to
-                            attain a
-                            political, economic, religious, or social goal through fear, coercion, or intimidation."
-                    </p>
-                    <p class="rightg"> The blank space on the right hand side will show you the graphs. </p>
-                </p>
-                <div id="extra-space">
-                </div>
                 <div id='sections' class=".section-wrapper">
+                    <section class="step Intro" id="Intro">
+                        <div class="section-title counter">Welcome to our website</div>
+                        <p>
+                            Our website is focusing on the terrorist that happened around the world from <b>1970 -
+                                2017
+                                We will introduce the worldwide terrorist that happened during this period in various
+                                graph.
+                                <br />
+                                The definition given by the researchers of terrorism is:
+                                "The threatened or actual use of illegal force and violence by a non-state actor to
+                                attain a
+                                political, economic, religious, or social goal through fear, coercion, or intimidation."
+                        </p>
+                    </section>
 
                     <section class="step entermap" id="EnterMap">
                         <div class="section-title counter">A worldwide Map shows the times of terrism</div>
-                       
-                        <p class="mapintro1">
+
+                        <p class="section-content">
                             Now there is a map on the right, combined with a heat map, shows you the countries that have
                             experienced the most terrorist attacks.<br />
                             Red colour represent the most times, and the lighter colour means less attacks had ever
@@ -80,7 +75,7 @@
                     <section class="step showpoints" id="showPoints">
                         <div class="section-title counter">Top countries</div>
                         The top countries
-                        <p class="mapintro2">
+                        <p class="section-content">
                             Besides showing you the countries, the indicators now point at each country on the map shows
                             you the
                             exact places that happened the most times of attacks.<br \>
@@ -93,7 +88,7 @@
                     <section class="step connection" id="Connection">
                         <div class="section-title counter">How attacks related</div>
                         Map that shows the relations
-                        <p class="mapintro3">
+                        <p class="section-content">
                             Now as you can see, there are several lines in the map which point to each other. <br />
                             These line indicates the relation between those attacks. Some of the attacks caused by the
                             same
@@ -106,7 +101,7 @@
                     <section class="step topterriost" id="TopTerriost">
                         <div class="section-title counter">Top Terrorist </div>
                         Top Terrorist
-                        <p class="barintro3">
+                        <p class="section-content">
                             Now the Horizontal bar chart on the right, shows the top terrorist that attack the most of
                             times.
                             <br />
@@ -123,7 +118,7 @@
                         <div class="section-title counter">Take a closer Look Number of injured, Killed or Kidnapped
                         </div>
 
-                        <p class="areaintro">
+                        <p class="section-content">
                             Afghanistan (افغانستان), officially the Islamic Republic of Afghanistan, is a landlocked
                             country
                             located in South-Central Asia.
@@ -142,7 +137,7 @@
                     <section class="step details" id="Details">
                         <div class="section-title counter">Attacks Summaries</div>
 
-                        <p class="country">
+                        <p class="section-content">
 
                             <br /><br />
                             <font size="4" color="#E6E6FA"><b></b></font><br />
@@ -163,7 +158,7 @@
                     </section>
                 </div>
                 <div class="section-title counter"></div>
-                THANK YOU FOR YOUR PRECISE TIME
+                THANK YOU FOR YOUR PRECIOUS TIME
 
                 <p class="endword">
                     First of all, thank you for viewing our website.
